fix: get rid off min height, causing issues on smaller screens

--- a/src/app/game/question/question.component.css
+++ b/src/app/game/question/question.component.css
@@ -2,7 +2,6 @@
   margin: auto;
   width: 100%;
   max-width: 750px;
-  min-height: 800px;
 }
 
 .question-img {
